# Anthy-Converter

./: Makefile.am  configure.ac  converter.cpp
